# testproject

./: Procfile  pyproject.toml  requirements.txt
pages/: tests.py  urls.py  views.py
testproject/: settings.py  urls.py
